The tsc(4) bus initialization was using a single statically allocated extent storage for each tsp(4), which caused a LOCKDEBUG kernel to fail because the extent storage contained a mutex which panics when the second mutex_init() is attempted.  Put the extent storage into the tsp_config structure so each tsp(4) gets it own.  Fixes PR port-alpha/38358.